<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             tools:context=".LeaveFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/employeeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameTextView"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="50dp" android:textSize="30dp"/>
        <TextView
                android:text="@string/totalTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalLeave" android:textSize="30dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/endDateText"
                android:layout_marginTop="68dp" app:layout_constraintHorizontal_bias="0.498"/>
        <Button
                android:text="@string/submitLeave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/submitLeaveButton" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/totalLeave"/>
        <TextView
                android:text="@string/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startDateText" android:textSize="25dp"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" android:layout_marginTop="172dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/endDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/endDateText" android:textSize="25dp"
                android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/startDateText"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/username" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hintUsername"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/startHalfDay" app:layout_constraintStart_toEndOf="@+id/startDateText"
                android:layout_marginStart="8dp" android:layout_marginTop="176dp"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"/>
        <Spinner
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/leaveTypeSpinner" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/username"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:entries="@array/leaveType"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>